--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     video {
       height: auto;
       max-height: 100vh;
-      width: 100vw;
+      width: 100%;
+      object-fit: cover;
     }
     video.flip {
       -moz-transform: scale(-1, 1);
@@ -15,6 +16,9 @@
     }
     html, body {
       margin: 0;
+    }
+    html {
+      overflow: hidden;
     }
   </style>
 </head>
